Fixing no overlap found view

--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -17,10 +17,12 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
     font-style: normal;
 }
 
+html {
+    height:100;
+}
 body {
+    margin: 0;
     height: 100%;
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
     background: rgb(68,102,129); /* Old browsers */
     background: -moz-radial-gradient(center, ellipse cover,  rgb(34, 68, 89) 0%, rgba(17,51,72,1) 70%); /* FF3.6+ */
     background: -webkit-gradient(radial, center center, 0px, center center, 70%, color-stop(0%,rgb(34, 68, 89)), color-stop(70%,rgba(17,51,72,1))); /* Chrome,Safari4+ */
@@ -30,6 +32,10 @@ body {
     background: radial-gradient(ellipse at center,  rgb(34, 68, 89) 0%,rgba(17,51,72,1) 70%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#446681', endColorstr='#113348',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
     background-size: contain;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
     color: #f2f2f2;
     text-transform: uppercase;
 
@@ -97,6 +103,7 @@ input {
 }
 
 #actors li {
+    min-height: 3em;
     list-style-type: none;
     background: #fff;
     margin-bottom: 8px;
